--- a/vignettes/1_Import_fcs.Rmd
+++ b/vignettes/1_Import_fcs.Rmd
@@ -6,23 +6,22 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
 ## Introduction
 
-Flow cytometry data (regardless of the type of instrument used) is generally saved as a **.fcs** file. This file is populated with raw data, fluorescence intensity (for optics based technologies) and abundance (for mass cytrometry), as well as various metadata including: *user id*, *instrument id*, *dynamic range of instrument*, etc. It is important to be able to interact with and manipulate the **.fcs** file as it gives the users/analysts fine grain control. 
+Flow cytometry data (regardless of the type of instrument used) is generally saved as a **.fcs** file. This file is populated with raw data, fluorescence intensity (for optics based technologies) and abundance (for mass cytrometry), as well as various metadata including: *user id*, *instrument id*, *dynamic range of instrument*, etc. It is important to be able to interact with and manipulate the **.fcs** file as it gives the users/analysts fine grain control.
 
-## Installing/loading required libraries 
+## Installing/loading required libraries
 
-You can install all the cytoverse packages as follows:
+You can install all the required packages as follows:
 
 ```{r install_libraries, echo=TRUE, eval=FALSE, message=FALSE}
-install.packages("BiocManager")
-BiocManager::install("cytolib")
-BiocManager::install("flowCore")
-BiocManager::install("flowWorkspace")
-BiocManager::install("ggcyto")
-BiocManager::install("openCyto")
-BiocManager::install("flowStats")
-BiocManager::install("CytoML")
+if (!require("BiocManager", quietly = TRUE))
+  install.packages("BiocManager")
+
+BiocManager::install(c("cytolib", "flowCore", "flowWorkspace", "ggcyto", 
+                       "openCyto", "flowStats", "CytoML", "flowClust",
+                       "flowClean", "flowAI", "PeacoQC"))
 ```
 
 For the moment, we only need to load `flowCore` and `flowWorkspace`.
@@ -34,61 +33,84 @@ library(flowWorkspace)
 
 ## FlowRepository workshop data
 
-In this workshop we will demonstrate the use of `cytoverse` packages to analyse publicly available datasets hosted on [FlowRepository](http://flowrepository.org/). 
-The first dataset [FR-FCM-Z5PC](https://flowrepository.org/id/FR-FCM-Z5PC) contains FCS files from a study [assessing the post recovery immune phenotypes from patients infected with COVID-19](https://www.nature.com/articles/s41467-022-34638-2). We are using a subset of the FCS files. 
-The second dataset [FR-FCM-ZZ36](http://flowrepository.org/id/FR-FCM-ZZ36) contains FCS files for OMIP-018, a study designed to phenotype T cells for expression of various chemokine receptors. 
+In this workshop we will demonstrate the use of different R packages to analyse publicly available datasets hosted on [FlowRepository](http://flowrepository.org/). The first dataset [FR-FCM-Z5PC](https://flowrepository.org/id/FR-FCM-Z5PC) contains FCS files from a study [assessing the post recovery immune phenotypes from patients infected with COVID-19](https://www.nature.com/articles/s41467-022-34638-2). We are using a subset of the FCS files. The second dataset [FR-FCM-ZZ36](http://flowrepository.org/id/FR-FCM-ZZ36) contains FCS files for OMIP-018, a study designed to phenotype T cells for expression of various chemokine receptors.
 
 The data required for this workshop, including subsets extracted from the FlowRepository datasets are made available inside vignettes/data folder.
 
 ## `cytoverse` data structures for **.fcs** files
 
-There are four **main** data structures that represent flow cytometry data in `cytoverse`: `cytoframe`, `cytoset`, `GatingHierarchy` and `GatingSet`.  
+There are four **main** data structures that represent flow cytometry data in `cytoverse`: `cytoframe`, `cytoset`, `GatingHierarchy` and `GatingSet`.
 
-- `cytoframe`: a single **.fcs** file,
-- `cytoset`: a list like object that can store multiple **.fcs** files,
-- `GatingHierarchy`: a list like object that allows building and attaching gates and filter to a `cytoframe`
-- `GatingSet`: a list like object that allows building and attaching gates and filter to a `cytoset`
+-   `cytoframe`: a single **.fcs** file,
+-   `cytoset`: a list like object that can store multiple **.fcs** files,
+-   `GatingHierarchy`: a list like object that allows building and attaching gates and filter to a `cytoframe`
+-   `GatingSet`: a list like object that allows building and attaching gates and filter to a `cytoset`
 
-Some of these have overlapping functionality, and we'll eventually explain when you would prefer one data structure to another as we continue through this workshop. 
+Some of these have overlapping functionality, and we'll eventually explain when you would prefer one data structure to another as we continue through this workshop.
 
-*Note:* <details>*There are additional legacy data structures called `flowFrame` and `flowSet` in `cytoverse` that are analogous to `cytoframe` and `cytoset` in function. We will not use these data structures in this workshop.* </details>
+There are additional legacy data structures called `flowFrame` and `flowSet` in `cytoverse` that are analogous to `cytoframe` and `cytoset` in function. We will briefly discuss these data structures in this workshop.
 
-## Reading in FCS files
+## Reading an FCS file
 
 There are two preferred approaches to read in **.fcs** file(s) into R:
 
-- Read in individual **.fcs** files as `cytoframe`,
-- Read in a set of **.fcs** files as `cytoset`,
+-   Read in individual **.fcs** files as `cytoframe` (associated with `flowWorkspace` package) or `flowFrame` (associated with `flowCore` package)
+-   Read in a set of **.fcs** files as `cytoset` (associated with `flowWorkspace` package) or `flowSet` (associated with `flowCore` package)
 
 (Additionally, you can read a workspace generated with another tool, such as FlowJo, using the `CytoML` package.)
 
-The function `load_cytoframe_from_fcs` is used to read in individual file as a `cytoframe` object. 
+### Working with `cytoframe` or `flowFrame` objects
+
+A few useful definitions that help us get oriented with the underlying data in the `cytoframe`/`flowFrame` object.
+
+-   **Channels**: Instrument derived labels of various parameters that were measured. Channels are the column names of the `cytoframe`/`flowFrame`. Any data generated from the same instrument will have the same (similar) Channel names.
+-   **Markers**: User provided labels for various parameters that were measured. For example: Channel name: B710-A, Marker name: CD3. Marker names are set by the users and may not be unique across experiments/users. Not all channels are markers -- some are physical parameters such as the forward scatter or side scatter. These channels will have their marker names set to `NA`.
+-   **Expression**: Measured values. A matrix where every row is an event (frequently a cell) and every column is a channel.
+
+Working with a `cytoframe`/`flowFrame` object is very similar to working with a `data.frame` in R, where a "row" is a cell and a "column" is a channel.
+
+#### Reading an FCS file as a `cytoframe` object
+
+The function `load_cytoframe_from_fcs` is used to read in individual file as a `cytoframe` object.
 
 ```{r load_cytoframe, eval=TRUE, echo=TRUE, message = FALSE}
 cf <- load_cytoframe_from_fcs("data/fcs-data/4000_BDC-CR1.fcs")
-
 # a cytoframe object
 cf
 ```
 
-The `cytoframe` object has 3 slots where various data is stored. 
+#### Reading an FCS file as a `flowFrame` object
 
-- `exprs(cf)` stores the expression matrix (i.e. the collected data),
-- `parameters(cf)` stores information pertaining to channels: channel name, marker description,and data ranges as an AnnotatedDataFrame,
-- `keyword(cf)` stores additional information extracted from the **.fcs** file header. The file header follow ISAC guidelines. Visit [here](https://isac-net.org/page/Data-Standards) for more information. 
+To read a FCS file as a `flowFrame` object: (standard for Flow Cytometry)
 
-## Working with `cytoframe` objects
+```{r}
+ff <- read.FCS("data/fcs-data/4000_BDC-CR1.fcs")
+# a flowFrame object
+ff
+```
 
-A few useful definitions that help us get oriented with the underlying data in the `cytoframe` object.
+#### `cytoframe` versus `flowFrame` objects
 
-  - **Channels**: Instrument derived labels of various parameters that were measured. Channels are the column names of the `cytoframe`. Any data generated from the same instrument will have the same (similar) Channel names.
-  - **Markers**: User provided labels for various parameters that were measured. 
-For example: Channel name: B710-A, Marker name: CD3 (in `cf`). Marker names are set by the users and may not be unique across experiments/users. Not all channels are markers -- some are physical parameters such as the forward scatter or side scatter.  These channels will have their marker names set to `NA`.
-  - **Expression**: Measured values. A matrix where every row is an event (frequently a cell) and every column is a channel.
-  
-Working with a `cytoframe` object is very similar to working with a `data.frame` in R, where a "row" is a cell and a "column" is a channel.  In particular, subsetting with square brackets `cf[i,j]` or `cf$` works as you might hope. 
-An important difference, however, is that unlike most other functions in R, the subset and assignment operations **DO NOT** create a new copy of the data but simply provides an updated "view" of the data. 
-Because this is quite unlike the rest of R, we will perseverate on this point.
+Both `cytoframe` and `flowFrame` object has 3 slots where various data is stored.
+
+-   `exprs(cf)`: stores the expression matrix (i.e. the collected data),
+-   `parameters(cf)`: stores information pertaining to channels: channel name, marker description,and data ranges as an AnnotatedDataFrame,
+-   `keyword(cf)`: stores additional information extracted from the **.fcs** file header. The file header follow ISAC guidelines. Visit [here](https://isac-net.org/page/Data-Standards) for more information.
+
+![Overview of `cytoframe`/`flowFrame` object](images/flowFrame.png){#fig-flowframe fig-alt="Overview of cytoframe/flowFrame object created by reading a FCS file" fig-align="center"}
+
+::: callout-tip
+In R, the `@` and `$` operators serve the purpose of accessing elements within an object. However, it is \textcolor{red}{not advisable} to employ these operators for accessing elements directly. A recommended practice is to use functions and methods explicitly designed for this purpose, as will be discussed in the next section.
+
+-   To extract any \textcolor{lpink}{pink} or \textcolor{lblue}{blue} slot shown in @fig-flowframe the `@` operator is used. On the other hand, to extract any \textcolor{lgreen}{green} slot the `$` operator is used.
+-   In general, the `@` operator is used to extract/replace contents of a slot or property of an object. The `$` operator is used to extract/replace parts on vectors, matrices, arrays or lists. 
+:::
+
+::: callout-note
+Interacting with a `cytoframe` is very similar to interacting with a `flowframe`, with one important difference. While operations such as subsetting or copying a `flowFrame` using the standard R assignment operator (`<-`) will perform a deep copy of the data in its slots, the same operations on a `cytoframe` will produce a view to the same underlying data as the original object. This means that changes made to the `cytoframe` resulting from subsetting or copying will affect the original `cytoframe.` 
+:::
+
+**From this point onwards, we focus on examples and usages involving the `cytoframe` object, with the majority of the content dedicated to exploring and understanding this specific data structure.**
 
 ### Examples
 
@@ -130,9 +152,31 @@ nrow(cf)
 
 # number of channels 
 ncol(cf)
+
+# dimesnions (nrows, nclos)
+dim(cf)
 ```
 
 Notice that there is a correspondence between channels, markers, and the expression matrix. i.e. the `names` of the named vector `markernames(cf)` are a subset of the columns of the expression matrix `exprs(cf)` as well as the columns of the `cytoframe`.
+
+#### Preliminary statistics
+
+```{r}
+# summary of expression
+summary(cf)
+
+# median value across each row
+row_stat <- each_row(cf, median)
+head(row_stat)
+
+# mean value across each row
+col_stat <- each_col(cf, mean)
+head(col_stat)
+```
+
+Statistic functions listed under location and scale estimator in [matrxStats page](https://cran.r-project.org/web/packages/matrixStats/vignettes/matrixStats-methods.html) can be used as the second argument in `each_row(argument1, argument2)` and `each_col(argument1, argument2)` functions.
+
+#### Aditional examples
 
 ```{r correspondance, echo=TRUE,message=FALSE}
 # interested marker: CD4
@@ -158,7 +202,7 @@ s2_cf <- cf[1:100, ]
 s2_cf
 ```
 
-Notice that the subset (`[]`) operation can be applied directly to the `cytoframe` object so that information regarding the file is preserved. Also, as indicated above, these operations provide an aliased view of the data without creating a **copy**. 
+Notice that the subset (`[]`) operation can be applied directly to the `cytoframe` object so that information regarding the file is preserved. Also, as indicated above, these operations provide an aliased view of the data without creating a **copy**.
 
 Below, we show examples of how to manipulate the `cytoframe` object and create a copy using `realize_view()`:
 
@@ -207,26 +251,78 @@ plot(
 
 ```
 
-
-Notice that the data range summary was not updated when we used `<-` to change the underlying expression matrix. A good practice is to use `transform` function to transform the underlying expression matrix. Importantly, `transform` also updates the data range summary. Moreover, `transform` can also be used to add new columns to the `cytoframe`. 
+Notice that the data range summary was not updated when we used `<-` to change the underlying expression matrix. A good practice is to use `transform` function to transform the underlying expression matrix. Importantly, `transform` also updates the data range summary. Moreover, `transform` can also be used to add new columns to the `cytoframe`.
 
 *Note*: We will go over `transformations` in a later section.
- 
-## Reading in a set of FCS files as a `cytoset`
 
-In a experimental sense, a single **.fcs** file is not very interesting, since this represents only a single sample.  To draw any conclusions, we'll want replicates.   When there are a set of **.fcs** files they can be loaded into R either as a `cytoset`. 
+### Basic plots using `flowViz` package
 
-**cytoset**: A collection of **.fcs** files, preferably, but not necessarily from the same panel/experiment.
+`flowViz` package provide functions and methods to visualize flow cytometry data. This package heavily depends on the flowCore package.
 
+```{r}
+#| output: false
+library(flowViz)
+```
+
+#### Examples
+
+If the object has only a single parameter this produces a histogram. To select specific parameters from a flowFrame for plotting, either subset the object or specify the parameters as a character vector as shown below.
+
+```{r}
+plot(cf, c("FSC-A"))
+```
+
+For exactly two parameters this plots a [bivariate density map](https://en.wikipedia.org/wiki/Multivariate_map#:~:text=A%20bivariate%20map%20or%20multivariate,%2C%20cartogram%2C%20or%20proportional%20symbols).
+
+```{r}
+#| fig-height: 5
+plot(cf, c("FSC-A", "SSC-A"))
+```
+
+For more than two parameters this produce a simple scatter plots matrix (splom). The smooth parameters lets you toggle between density-type smoothScatter plots and regular scatterplots. For far more sophisticated plotting of flow cytometry data, ggcyto package is used generally (will be discussed later).
+
+For multiple parameters,
+
+```{r}
+#| cache: true
+#| warning: false
+#| fig-width: 12
+#| fig-height: 12
+all_param = dput(colnames(cf)[6:8])
+plot(cf, all_param)
+```
+
+## Reading a set of FCS files
+
+In a experimental sense, a single **.fcs** file is not very interesting, since this represents only a single sample. To draw any conclusions, we'll want replicates. When there are a set of **.fcs** files they can be loaded into R either as a `cytoset` or `flowSet`.
+
+**cytoset/flowSet**: A collection of **.fcs** files, preferably, but not necessarily from the same panel/experiment.
+
+### Reading a set of FCS files as a `cytoset`
 
 ```{r cytoset_example, echo=TRUE, message=TRUE}
 cs <- load_cytoset_from_fcs(path = "data/fcs-data/")
 cs
 ```
 
-A `cytoset` can also be indexed with square brackets `cs[i,j]`, however now the row index `i` selects samples (**individual FCS files**) rather than cells. A `cytoset` also behaves like a list -- a double bracket `cs[[i]]` selects a single sample as a `cytoframe`.
+### Reading a set of FCS files as a `flowSet`
 
-Generally, each FCS file replicate has unique metadata properties that can (**and should**) be supplied to the `cytoset`. These can be added after loading the `cytoset` by using `pData(x) <- data.frame`. The `rownames` of the data.frame **must match** the `sampleNames` of the `cytoset`.
+```{r flowSet_example, echo=TRUE, message=TRUE}
+frames <- lapply(dir("data/fcs-data/", full.names=TRUE), read.FCS)
+fs <- as(frames, "flowSet") 
+fs
+```
+A `cytoset`/`flowSet` can also be indexed with square brackets `cs[i,j]`, however now the row index `i` selects samples (**individual FCS files**) rather than cells. A `cytoset`/`flowSet` also behaves like a list -- a double bracket `cs[[i]]` selects a single sample as a `cytoframe`/`flowFrame`.
+
+Generally, each FCS file replicate has unique metadata properties that can (**and should**) be supplied to the `cytoset`/`flowSet`. These can be added after loading the `cytoset`/`flowSet` by using `pData(x) <- data.frame`. The `rownames` of the data.frame **must match** the `sampleNames` of the `cytoset`/`flowSet`.
+
+::: callout-note
+The primary difference between the `cytoset` and `flowSet` classes is in the underlying representation of the data. Because `cytoset` is a reference class, copying or subsetting a `cytoset` object will return a `cytoset` pointing to the same underlying data. A deep copy of the data can be obtained via the realize_view method as before.
+
+There is one notable exception to the typical behavior of most methods returning a `cytoframe`. The standard extraction operator (`[[]]`) will by default perform a deep copy of the subset being extracted and return a `flowFrame`. 
+:::
+
+**Here onwards, we focus on examples involving the `cytoset` object, with the majority of the content dedicated to exploring and understanding this specific data structure.**
 
 ```{r show_metadata_cs, echo=TRUE,message=TRUE}
 # prior to providing metadata
@@ -264,9 +360,9 @@ pData(cs) <- metadata
 pData(cs)
 ```
 
-The benefit of having metadata is that we can use many of the sub-setting operations in a metadata specific manner. 
+The benefit of having metadata is that we can use many of the sub-setting operations in a metadata specific manner.
 
-This is much more convenient than going back and forth between the full set of files. 
+This is much more convenient than going back and forth between the full set of files.
 
 ```{r cytoset_subset, echo=TRUE, message=TRUE}
 # subset by files that have myeloid staining panel without creating a copy of the data
@@ -333,9 +429,9 @@ range(cs_small2[[1, "B515-A"]])
 range(cs[[2, "B515-A"]])
 ```
 
-Notice that `cs` is left unchanged. 
+Notice that `cs` is left unchanged.
 
-## Adding additional **.fcs** files to `cytoset`
+### Adding additional **.fcs** files to `cytoset`
 
 Lastly, we can also add additional **.fcs** files to a `cytoset` using `cs_add_cytoframe`.
 
@@ -353,10 +449,9 @@ cs_add_cytoframe(
 cs_small
 ```
 
+### From `cytoset` to `cytoframe`
 
-## From `cytoset` to `cytoframe`
-
-It is possible that you may want to extract a `cytoframe` or extract all files as a list of `cytoframe`. We can either use ``[[`` to directly grab a `cytoframe` or `cytoset_to_list`.
+It is possible that you may want to extract a `cytoframe` or extract all files as a list of `cytoframe`. We can either use `[[]]` to directly grab a `cytoframe` or `cytoset_to_list`.
 
 ```{r cytoset_to_cytoframe, echo=TRUE, eval=TRUE, message = FALSE}
 # extract a single cytoframe by using cs[[index/samplename]]
@@ -366,10 +461,9 @@ single_cf <- cs[[1]]
 list_of_cf <- cytoset_to_list(cs) 
 ```
 
+### List like operation with `cytoset`
 
-## List like operation with `cytoset`
-
-As indicated previously, a `cytoset` behaves like a list. To leverage this behaviour we can use `fsApply` to iterate through the samples in a `cytoset`. By default, output is attempted to be coerced to a single array like object.  (Set `simplify = FALSE` to return another list.)
+As indicated previously, a `cytoset` behaves like a list. To leverage this behaviour we can use `fsApply` to iterate through the samples in a `cytoset`. By default, output is attempted to be coerced to a single array like object. (Set `simplify = FALSE` to return another list.)
 
 ```{r fsApply, echo=TRUE, eval=TRUE, message=FALSE}
 # getting number of rows (cells) of individual cytoframes
@@ -377,11 +471,27 @@ n_cell_events <- fsApply(cs, nrow)
 n_cell_events
 ```
 
+## Methods for conversion between `cyto-` and `flow-` objects
+
+```{r cyto_to_flo, echo=TRUE, eval=TRUE, message = FALSE}
+# convert a flowframe to cytoframe 
+ff_new <- cytoframe_to_flowFrame(cf)
+
+# convert a cytoframe to flowframe 
+cf_new <- flowFrame_to_cytoframe(ff)
+
+# convert a flowset to cytoset 
+fs_new <- cytoset_to_flowSet(cs)
+
+# convert a cytoset to flowset 
+cs_new <- flowSet_to_cytoset(fs)
+```
+
 ## Saving your data
 
-Saving your data is easy.
+Saving `cyto-` data is easy.
 
-```{r save_cytoset,echo=TRUE, eval=FALSE,message=FALSE}
+```{r save_cyto, echo=TRUE, eval=FALSE,message=FALSE}
 # save cytoframe
 cf_write_disk(cf, "path/to/my_new_cf")
 
@@ -400,6 +510,21 @@ load_cytoset("path/to/my/cs")
 
 ```
 
+Writing `flow-` data is easy.
+
+```{r save_flow,echo=TRUE, eval=FALSE,message=FALSE}
+# write flowFrame
+write.FCS(ff, "path/to/my_new_ff")
+
+# write flowSet
+write.flowSet(fs, path = "path/to/my/cs")
+```
+
+We have previously discussed how to read FCS files into a `flowFrame` or `flowSet` objects. 
+
 ## Conclusion
 
-We went through multiple ways to import, interact with, and manipulate **.fcs** files using the `cytoverse` tools. It is important to note additional functionality, *which we will not going to go over at this workshop for the sake of time*, for further manipulation and even creation of **.fcs** files exist with the `cytoverse`. We encourage you to explore them further at your leisure by calling `browseVignettes("flowWorkspace")`. 
+We went through multiple ways to import, interact with, and manipulate **.fcs** files using the `cytoverse` tools. It is important to note additional functionality, *which we will not going to go over at this workshop for the sake of time*, for further manipulation and even creation of **.fcs** files exist with the `cytoverse`. We encourage you to explore them further at your leisure by calling `browseVignettes("flowWorkspace")` and `browseVignettes("flowCore")`.
+
+---
+^*This workshop materials is adapted from [CytoverseBioc 2023 workshop](https://cdn.ozetteai.com/cytoverse-bioc-2023/index.html).*^
