minor changes to import FCS and yml

--- a/vignettes/1_Import_fcs.Rmd
+++ b/vignettes/1_Import_fcs.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basics of working with FCS files"
+title: "Basics on working with FCS files"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Basics of working with FCS files}
