--- a/vignettes/5_Gating_gatingTemplate.Rmd
+++ b/vignettes/5_Gating_gatingTemplate.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Gating Cells in cytoverse using gatingTemplates (optional)"
+title: "Gating Cells in cytoverse - Part 3 (optional)"
 vignette: >
   %\VignetteIndexEntry{Gating Cells}
   %\VignetteEngine{knitr::rmarkdown}
@@ -21,8 +21,7 @@ library(openCyto)
 library(ggcyto)
 
 # make gs available
-source("make_transformed_gs_func.R")
-gs <- make_transformed_gs(add_gates = TRUE)
+gs <- load_gs(path = "data/gating-set/")
 ```
 
 ```{r gatingTemplate_load, echo=TRUE, eval= TRUE, message = FALSE}
