--- a/vignettes/7_Reporting.Rmd
+++ b/vignettes/7_Reporting.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reporting: Counts, Frequency, etc"
+title: "Reporting: Counts, Frequency, etc."
 vignette: >
   %\VignetteIndexEntry{Reporting}
   %\VignetteEngine{knitr::rmarkdown}
